--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <div class="container-fluid">
     <div class="row">
         <mat-toolbar color="primary">
-                <a href="">hello</a>
-                <a href="#">Header</a>
+                <div class="col-2">
+                    <a href="">Toggle</a>
+                </div>
+                <div class="col-7">
+                    <a href="#">Header</a>
+                </div>
                 <span class="spacer"></span>
                 <div class="col-3">
                     <a href="#">Profile</a>
